# FileManager

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts  项目目标说明.txt
FileManager测试文件/: MANIFEST.txt  README.md
FileManager测试文件/docs/: 00_TEST_PLAN.md  01_P0_核心主流程.md  02_Tag结构与聚合.md  03_搜索与SavedQuery.md  04_文件维护_重复与版本.md  05_Tag维护.md  06_回归验收清单.md  EXPECTED_RESULTS.md  TEST_DATA_MAP.csv
FileManager测试文件/seed/: file_tag_assignments.csv  tag_tree.json
FileManager测试文件/test-dataset/00_seed_real_content/: AI 工具使用心得.md  Bug 记录.md  Embedding 模型评测.xlsx  File Manager 产品需求.md  会议纪要 - tag 设计讨论.md  后端接口设计.md  技术资料总览.md  (+5 more)
docs/plans/: 2026-04-26-react-tauri-foundation.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  state.rs
src-tauri/src/commands/: files.rs  mod.rs  queries.rs  settings.rs  tags.rs  versions.rs  workspace.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/domain/: errors.rs  file.rs  mod.rs  query.rs  tag.rs  version.rs
src-tauri/src/infra/: clock.rs  fs.rs  hashing.rs  mod.rs  preview.rs
src-tauri/src/policies/: aggregation_policy.rs  freeze_policy.rs  inbox_policy.rs  mod.rs  tag_policy.rs
src-tauri/src/repositories/: file_content_repo.rs  file_repo.rs  mod.rs  query_repo.rs  tag_repo.rs  version_repo.rs
src-tauri/src/services/: file_service.rs  mod.rs  query_service.rs  settings_service.rs  tag_service.rs  version_service.rs  workspace_service.rs
(+169 files in other folders)
